--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -14,10 +14,7 @@
 		        "work": "I want to <strong>work</strong> in France",
 		        "family": "I want to <strong>get my family</strong> in France",
 		        "extend": "I want to <strong>extend my stay</strong> in France",
-		        "nationality": "I want to <strong>acquire French nationality</strong>",
-		        "visit": "I want to <strong>visit</strong> France",
-		        "user.account": "I want to <strong>manage my personal account</strong>",
-		        "follow": "I want to <strong>follow my applications</strong>"
+		        "nationality": "I want to <strong>acquire French nationality</strong>"
 	        }
        	},
        	"company": {
