--- a/src/main/webapp/i18n/fr/main.json
+++ b/src/main/webapp/i18n/fr/main.json
@@ -14,10 +14,7 @@
 		        "work": "Je veux <strong>travailler</strong> en France",
 		        "family": "Je veux <strong>faire venir ma famille</strong> en France",
 		        "extend": "Je veux <strong>prolonger mon séjour</strong> en France",
-		        "nationality": "Je veux <strong>acquérir la nationalité</strong> française",
-		        "visit": "Je veux <strong>visiter</strong> la France",
-		        "user.account": "Je veux <strong>gérer mon compte personnel</strong>",
-		        "follow": "Je veux <strong>suivre mes demandes</strong>"
+		        "nationality": "Je veux <strong>acquérir la nationalité</strong> française"
 	        }
 	    },
        	"company": {
