--- a/src/main/webapp/i18n/fr/identification.json
+++ b/src/main/webapp/i18n/fr/identification.json
@@ -29,9 +29,11 @@
 	    	"fingerprints": "Recueil des empreintes digitales",
 	    	"signature": "Recueil de la signature",
 	    	
+	    	"toValidate": "A valider",
 	    	"validated": "Validé",
 	    	
 	    	"button": {
+	    		"photo": "Prendre la photo",
 	    		"accept": "Certifier les données du demandeur"
 	    	}
 		}
