ajout biometrie avec signature

--- a/src/main/webapp/i18n/en/identification.json
+++ b/src/main/webapp/i18n/en/identification.json
@@ -34,6 +34,7 @@
 	    	
 	    	"button": {
 	    		"photo": "Take a picture",
+	    		"signature.clear": "Clear",
 	    		"accept": "Certify informations"
 	    	}
 		}
