--- a/src/main/webapp/i18n/fr/identification.json
+++ b/src/main/webapp/i18n/fr/identification.json
@@ -34,6 +34,7 @@
 	    	
 	    	"button": {
 	    		"photo": "Prendre la photo",
+	    		"signature.clear": "Effacer",
 	    		"accept": "Certifier les données du demandeur"
 	    	}
 		}
