Creation page mes donnees

--- a/src/main/webapp/i18n/en/identification.json
+++ b/src/main/webapp/i18n/en/identification.json
@@ -36,6 +36,7 @@
 	    	
 	    	"button": {
 	    		"photo": "Take a picture",
+	    		"fingerprints": "Start fingerprints",
 	    		"signature.clear": "Clear",
 	    		"accept": "Certify informations"
 	    	}
