--- a/src/main/webapp/i18n/en/identity.json
+++ b/src/main/webapp/i18n/en/identity.json
@@ -15,9 +15,10 @@
             "document.title": "Attach your documents",
             "passport": "Passport",
             "passport.placeholder": "Click or drag your passport here...",
-            "passport.placeholder.wait": "Uploading...",
+            "passport.tooltip": "Thank you to join the pages relating to the civil status, validity dates, the entry stamps and visas",
             "birthAct": "Id document(s)",
-            "birthAct.placeholder": "Click or drag your id documents here..."
+            "birthAct.placeholder": "Click or drag your id documents here...",
+            "birthAct.tooltip": "Thank you to attach an excerpt from your birth certificate with filiation or a full copy of your birth certificate"
 		}
 	}
 }
