creation des mails

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -1,16 +1,56 @@
 # Error page
 error.title=Votre demande ne peut être traitée
-error.subtitle=Désolé, une erreur s'est produite.
+error.subtitle=Désolé, une erreur s\u2019est produite.
 error.status=Status:
 error.message=Message:
 
 # Activation e-mail
 email.activation.title=Activation de votre compte sejour
 email.activation.greeting=Bonjour,
+email.activation.text=Votre compte personnel a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s. Nous vous invitons maintenant \u00e0 l\u2019activer en cliquant sur le lien ci-dessous :
 email.activation.link=Activer votre compte
-email.activation.text1=Votre compte sejour a été créé, pour l'activer merci de cliquer sur le lien ci-dessous:
-email.activation.text2=Cordialement,
-email.signature=sejour.
+
+email.recevability.title=Validation de la recevabilit\u00e9 de votre demande
+email.recevability.greeting=Bonjour {0} {1},
+email.recevability.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Un num\u00e9ro \u00e9tranger vous a \u00e9t\u00e9 attribu\u00e9 : {0}
+email.recevability.text2=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul en cliquant sur le lien ci-dessous :
+email.recevability.link=Prendre rendez-vous
+
+email.decision.title=D\u00e9cision favorable pour votre demande de s\u00e9jour \u00e9tudiant
+email.decision.greeting=Bonjour {0} {1},
+email.decision.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 accept\u00e9e. Votre titre de s\u00e9jour est en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019il sera disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul.
+
+email.permit.title=Disponibilit\u00e9 de votre carte de s\u00e9jour \u00e9tudiant
+email.permit.greeting=Bonjour {0} {1},
+email.permit.text1=Votre titre de s\u00e9jour \u00e9tudiant est disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 l\u2019accueil de l\u2019Ambassade muni de votre pi\u00e8ce d\u2019identit\u00e9 :
+email.permit.text2=43-12 Seosomun-ro, Seodaemun-gu - SEOUL 03741 (120-030)
+email.permit.text3=Pour vous offrir les meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.permit.link=Confirmer mon arriv\u00e9e en France
+
+email.arrival.title=Confirmation de votre arriv\u00e9e en France
+email.arrival.greeting=Bonjour {0} {1},
+email.arrival.text1=Nous esp\u00e9rons que votre installation en France se passe bien.
+email.arrival.text2=Pour vous offrir les meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, nous vous rappelons que vous devez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
+email.arrival.link=Confirmer mon arriv\u00e9e en France
+
+email.renewal.title=Renouvellement de votre droit au s\u00e9jour
+email.renewal.greeting=Bonjour {0} {1},
+email.renewal.text=Votre titre de s\u00e9jour arrive \u00e0 expiration dans deux mois. Si vous souhaitez prolonger votre s\u00e9jour en France, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 d\u00e9poser votre demande de renouvellement en ligne \u00e0 l\u2019aide du lien ci-dessous :
+email.renewal.link=Prolonger mon s\u00e9jour en France
+
+email.rdv.title=Confirmation de votre rendez-vous
+email.rdv.greeting=Bonjour {0} {1},
+email.rdv.text=Nous vous confirmons votre rendez-vous le {0} \u00e0 {1} \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul. Merci de vous pr\u00e9senter \u00e0 l\u2019accueil \u00e0 l\u2019heure dite, muni de votre passeport et de vos documents d\u2019\u00e9tat-civil originaux.
+email.rdv.ambassy=Ambassade de France \u00e0 S\u00e9oul :
+email.rdv.street=43-12 Seosomun-ro,
+email.rdv.complement=Seodaemun-gu
+email.rdv.city=SEOUL 03741 (120-030)
+email.rdv.phone=T\u00e9l  : (82-2) 3149 4300
+email.rdv.access=M\u00e9tro Chungjeogno, Sortie 3
+
+email.regards=Cordialement,
+email.signature=L\u2019\u00e9quipe S\u00e9jour.
+email.signature.administration=Administration des Etrangers en France
 
 # Reset e-mail
 email.reset.title=sejour password reset
