--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -10,6 +10,11 @@ email.activation.greeting=Bonjour,
 email.activation.text=Votre compte personnel a \u00e9t\u00e9 cr\u00e9\u00e9 avec succ\u00e8s. Nous vous invitons maintenant \u00e0 l\u2019activer en cliquant sur le lien ci-dessous :
 email.activation.link=Activer votre compte
 
+email.payment.title=Confirmation du d\u00e9p\u00f4t de votre demande
+email.payment.greeting=Bonjour {0} {1},
+email.payment.done=Nous accusons r\u00e9ception de votre demande d\u00e9pos\u00e9e et r\u00e9gl\u00e9e en ligne le {0} \u00e0 {1}.
+email.payment.next=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rifi\u00e9e par l\u2019Administration des \u00e9trangers en France. Si votre dossier est recevable, nous vous enverrons une notification de confirmation vous invitant \u00e0 finaliser le d\u00e9p\u00f4t de votre demande. Si votre dossier n\u2019est pas recevable, nous vous indiquerons les raisons et vous pr\u00e9ciserons le(s) \u00e9l\u00e9ment(s) manquant(s) le cas \u00e9ch\u00e9ant.
+
 email.recevability.title=Validation de la recevabilit\u00e9 de votre demande
 email.recevability.greeting=Bonjour {0} {1},
 email.recevability.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Un num\u00e9ro \u00e9tranger vous a \u00e9t\u00e9 attribu\u00e9 : {0}
