--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -20,10 +20,12 @@ email.recevability.greeting=Bonjour {0} {1},
 email.recevability.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Un num\u00e9ro \u00e9tranger vous a \u00e9t\u00e9 attribu\u00e9 : {0}
 email.recevability.text2=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul en cliquant sur le lien ci-dessous :
 email.recevability.link=Prendre rendez-vous
+email.recevability.renewal.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Nous vous recontacterons d\u00e8s que celle-ci aura \u00e9t\u00e9 instruite.
 
 email.decision.title=D\u00e9cision favorable pour votre demande de s\u00e9jour \u00e9tudiant
 email.decision.greeting=Bonjour {0} {1},
 email.decision.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 accept\u00e9e. Votre titre de s\u00e9jour est en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019il sera disponible \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul.
+email.decision.renewal.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 accept\u00e9e. Votre titre de s\u00e9jour est en cours de fabrication. Nous vous recontacterons d\u00e8s qu\u2019il sera disponible.
 
 email.permit.title=Disponibilit\u00e9 de votre carte de s\u00e9jour \u00e9tudiant
 email.permit.greeting=Bonjour {0} {1},
@@ -31,6 +33,8 @@ email.permit.text1=Votre titre de s\u00e9jour \u00e9tudiant est disponible \u00e
 email.permit.text2=43-12 Seosomun-ro, Seodaemun-gu - SEOUL 03741 (120-030)
 email.permit.text3=Pour vous offrir les meilleurs services et faciliter vos d\u00e9marches aupr\u00e8s des autres administrations fran\u00e7aises, vous devrez confirmer votre date d\u2019arriv\u00e9e dans le mois suivant votre entr\u00e9e en France et mettre \u00e0 jour vos coordonn\u00e9es \u00e0 l\u2019aide du lien ci-dessous :
 email.permit.link=Confirmer mon arriv\u00e9e en France
+
+email.permit.renewal.text=Votre titre de s\u00e9jour \u00e9tudiant est disponible. Pour le r\u00e9cup\u00e9rer nous vous invitons \u00e0 vous pr\u00e9senter d\u00e8s \u00e0 pr\u00e9sent et sans rendez-vous \u00e0 XXX muni de votre pi\u00e8ce d\u2019identit\u00e9.
 
 email.arrival.title=Confirmation de votre arriv\u00e9e en France
 email.arrival.greeting=Bonjour {0} {1},
