--- a/src/main/webapp/i18n/fr/recevability.json
+++ b/src/main/webapp/i18n/fr/recevability.json
@@ -15,7 +15,7 @@
 	    	"project": "Vérification du projet",
 	    	
 	    	"toVerify": "A vérifier",
-	    	"verified": "Vérifiés",
+	    	"verified": "Vérifié",
 	    	
 	    	"button": {
 	    		"accept": "Valider la recevabilité de la demande",
