Ajout switch particulier/entreprise dans navbar

--- a/src/main/webapp/i18n/en/main.json
+++ b/src/main/webapp/i18n/en/main.json
@@ -6,7 +6,9 @@
     		"choice": "Choose your profile :",
     		"button": {
     			"individual": "I am an individual",
-    			"company": "I am a company"
+    			"individual.short": "Individual",
+    			"company": "I am a company",
+    			"company.short": "Entreprise"
     		}
     	},
     	"usager": {
