Creation page detail demande dans mon compte personnel

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -1,5 +1,6 @@
 {
     "account": {
+    	"page.title": "My account",
         "title": {
 	        "info": "My personal informations",
 	        "application": "My applications",
