--- a/src/main/webapp/i18n/fr/account.json
+++ b/src/main/webapp/i18n/fr/account.json
@@ -1,5 +1,6 @@
 {
     "account": {
+    	"page.title": "Mon compte personnel",
         "title": {
 	        "info": "Mes données",
 	        "application": "Mes demandes",
