--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -17,7 +17,7 @@ email.payment.next=La recevabilit\u00e9 de votre dossier va \u00eatre v\u00e9rif
 
 email.recevability.title=Validation de la recevabilit\u00e9 de votre demande
 email.recevability.greeting=Bonjour {0} {1},
-email.recevability.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Un num\u00e9ro \u00e9tranger vous a \u00e9t\u00e9 attribu\u00e9 : {0}
+email.recevability.text1=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable.
 email.recevability.text2=Pour finaliser le d\u00e9p\u00f4t de votre demande, nous vous invitons d\u00e8s \u00e0 pr\u00e9sent \u00e0 prendre rendez-vous \u00e0 l\u2019Ambassade de France \u00e0 S\u00e9oul en cliquant sur le lien ci-dessous :
 email.recevability.link=Prendre rendez-vous
 email.recevability.renewal.text=Votre demande de s\u00e9jour \u00e9tudiant a \u00e9t\u00e9 jug\u00e9e recevable. Nous vous recontacterons d\u00e8s que celle-ci aura \u00e9t\u00e9 instruite.
