correction libellé paiement + ajout heure dans Mes Demandes

--- a/src/main/webapp/i18n/en/application.json
+++ b/src/main/webapp/i18n/en/application.json
@@ -15,7 +15,7 @@
 			"detail": "Detail",
 			"modified": "Application modified on {{modificationDate}} - {{userName}}",
 			"submit": "Application submitted on {{submitDate}} - {{userName}}",
-			"payment": "Application paid on {{paymentDate}} - {{userName}}",
+			"payment": "Payment done on {{paymentDate}} at {{paymentHour}} - {{userName}}",
 			"recevability.wait": "Waiting for recevability verification by the french administration of foreigners",
 			"recevability": "Application recevability verified on {{recevabilityDate}} - French administration of foreigners",
 			"rdv.future": "Appointment confirmed for {{rdvDate}} - {{userName}}",
