correction pb date naissance + heure rdv (et pas paiement)

--- a/src/main/webapp/i18n/fr/application.json
+++ b/src/main/webapp/i18n/fr/application.json
@@ -15,10 +15,10 @@
 			"detail": "Détail",
 			"modified": "Demande modifiée le {{modificationDate}} - {{userName}}",
 			"submit": "Demande déposée le {{submitDate}} - {{userName}}",
-			"payment": "Paiement effectué le {{paymentDate}} à {{paymentHour}} - {{userName}}",
+			"payment": "Paiement effectué le {{paymentDate}} - {{userName}}",
 			"recevability.wait": "En attente de vérification de la recevabilité par l'administration des étrangers en France",
 			"recevability": "Recevabilité de la demande vérifiée le {{recevabilityDate}} - Administration des étrangers en France",
-			"rdv.future": "Rendez-vous confirmé le {{rdvDate}} - {{userName}}",
+			"rdv.future": "Rendez-vous confirmé le {{rdvDate}} à {{rdvHour}} - {{userName}}",
 			"rdv.passed": "Rendez-vous réalisé le {{rdvDate}} - {{userName}}",
 			"decision.wait": "En attente d'instruction et décision par l'administration des étrangers en France",
 			"decision": "Instruction et décision validée le {{decisionDate}} - Administration des étrangers en France"
