--- a/src/main/webapp/i18n/en/application.json
+++ b/src/main/webapp/i18n/en/application.json
@@ -15,10 +15,10 @@
 			"detail": "Detail",
 			"modified": "Application modified on {{modificationDate}} - {{userName}}",
 			"submit": "Application submitted on {{submitDate}} - {{userName}}",
-			"payment": "Payment done on {{paymentDate}} at {{paymentHour}} - {{userName}}",
+			"payment": "Payment done on {{paymentDate}} - {{userName}}",
 			"recevability.wait": "Waiting for recevability verification by the french administration of foreigners",
 			"recevability": "Application recevability verified on {{recevabilityDate}} - French administration of foreigners",
-			"rdv.future": "Appointment confirmed for {{rdvDate}} - {{userName}}",
+			"rdv.future": "Appointment confirmed for {{rdvDate}} at {{rdvHour}} - {{userName}}",
 			"rdv.passed": "Appointment taken on {{rdvDate}} - {{userName}}",
 			"decision.wait": "Waiting for instruction and decision by the french administration of foreigners",
 			"decision": "Instruction and decision validated on {{decisionDate}} - French administration of foreigners"
