--- a/src/main/webapp/i18n/fr/identification.json
+++ b/src/main/webapp/i18n/fr/identification.json
@@ -9,7 +9,7 @@
 			"applicationType": "Type de demande",
 			"step": "Etape",
 			"documents": "Certification des documents",
-			"biometrics": "Reccueil de la biométrie"
+			"biometrics": "Recueil de la biométrie"
 		},
 		"documents": {
 	    	"title": "{{studentName}} - Première demande de séjour étudiant",
