suppression dernier reliquat demande

--- a/src/main/webapp/i18n/en/applicationType.json
+++ b/src/main/webapp/i18n/en/applicationType.json
@@ -1,7 +1,6 @@
 {
     "sejourApp": {
-        "TypeDemande" : {
-            "SELECT": "{VALUE, select, premiere{premiere} reexamen{reexamen} other{}}",
+        "ApplicationType" : {
             "premiere": "First application",
             "reexamen": "Reexamen",
             "renouvellement": "Renewal"
