--- a/src/main/webapp/i18n/en/applicationNature.json
+++ b/src/main/webapp/i18n/en/applicationNature.json
@@ -1,7 +1,6 @@
 {
     "sejourApp": {
-        "NatureDemande" : {
-            "SELECT": "{VALUE, select, sejour_etudiant{sejour_etudiant} sejour_salarie{sejour_salarie} sejour_competences_talents{sejour_competences_talents} other{}}",
+        "ApplicationNature" : {
             "sejour_etudiant": "Student residency",
             "sejour_salarie": "Salary residency",
             "sejour_competences_talents": "Talent residency"
