--- a/src/main/webapp/i18n/fr/applicationType.json
+++ b/src/main/webapp/i18n/fr/applicationType.json
@@ -1,7 +1,6 @@
 {
     "sejourApp": {
-        "TypeDemande" : {
-            "SELECT": "{VALUE, select, premiere{premiere} reexamen{reexamen} other{}}",
+        "ApplicationType" : {
             "premiere": "Primo-demande",
             "reexamen": "Réexamen",
             "renouvellement": "Renouvellement"
