prise en compte des retours sur le sejour suite à la demo

--- a/src/main/webapp/i18n/en/address.json
+++ b/src/main/webapp/i18n/en/address.json
@@ -12,8 +12,8 @@
 			"country": "Country",
 			"phone": "Phone",
 			"email": "Email",
-			"contactType": "Prefered Contact",
-			"contactType.tooltip": "Your preferred contact method will be used to inform you about the progress of your application."
+			"contactType": "Prefered Contact(s)",
+			"contactType.tooltip": "Your preferred contact methods will be used to inform you about the progress of your application."
 		},
 		"french" : {
 			"page.title": "My arrival in France",
