--- a/src/main/webapp/i18n/fr/renouveler.json
+++ b/src/main/webapp/i18n/fr/renouveler.json
@@ -2,8 +2,8 @@
 	"renouveler": {
 		"title": "Demande de renouvellement de séjour",
 		"choice": "Choisissez votre démarche",
-		"stateUnchange": "Je veux prolonger mon séjour sans changement de statut",
-		"stateChange": "Je veux prolonger mon séjour et changer de statut"
+		"stateUnchange": "Je veux prolonger mon séjour sans changement de statut<br><br><span style='font-size: 17px'>(exemple : je prolonge mes études)</span>",
+		"stateChange": "Je veux prolonger mon séjour et changer de statut<br><br><span style='font-size: 17px'>(exemple :  je passe du statut d'étudiant au statut de salarié)</span>"
 	},
     "etudier": {
         "title": "Demande de renouvellement de séjour étudiant",
@@ -29,7 +29,7 @@
         	"step.short": "Paiement",
         	"step.long": "Pré-payez vos taxes de séjour"
         },
-        "preparationText": "<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p><ul><li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li><li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant),</li><li>en cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li><li>en cas de changement d'adresse, d'un justificatif de domicile,</li></ul><p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p>",
+        "preparationText": "<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p><ul><li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li><li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant),</li><li>en cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li><li>en cas de changement d'adresse, d'un justificatif de domicile,</li></ul><p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p><p><a href='#'>Trouver un interprète traducteur agréé</a></p>",
         "button": {
         	"start": "Démarrer",
         	"continue": "Continuer",
