creation page demarrage naturalisation

--- a/src/main/webapp/i18n/en/applicationNature.json
+++ b/src/main/webapp/i18n/en/applicationNature.json
@@ -3,7 +3,8 @@
         "ApplicationNature" : {
             "sejour_etudiant": "Student residency",
             "sejour_salarie": "Salary residency",
-            "sejour_competences_talents": "Talent residency"
+            "sejour_competences_talents": "Talent residency",
+            "naturalisation": "Naturalization"
         }
     }
 }
